# coffee-roaster-mcp

./: .gitignore  AGENTS.md  README.md  pyproject.toml  server.json
.github/instructions/: copilot.instructions.md
.github/scripts/: smoke_install_built_wheel.py  write_coverage_summary.py
.github/workflows/: ci.yml  claude-code-review.yml  release.yml
docs/: install-and-hardware-setup.md  release.md
docs/plans/: coffee-roaster-mcp-v0.1-overall-plan.md  e2-runtime-crosswalk-from-coffee-roasting-poc.md
docs/session-summaries/: 2026-05-03-bootstrap-pr64.md  2026-05-03-e1-s4-pr65-review-cycle.md  2026-05-03-e1-s5-through-e1-s7-and-e1-s8-prep.md  2026-05-04-e2-s1-e2-s2-code-review-summary.md  2026-05-04-e2-s1-e2-s2-runtime-and-review-cycle.md  2026-05-04-e2-s3-e2-s4-code-review-summary.md  2026-05-04-e2-s3-e2-s4-runtime-and-review-cycle.md  2026-05-04-e2-s4-pr73-copilot-review-assessment.md  2026-05-04-e2-s4-pr73-final-runtime-and-review-cycle.md  2026-05-04-e2-s5-pr74-phase-transitions-review-cycle.md  2026-05-04-e2-s6-pr75-emergency-stop-review-cycle.md  2026-05-04-e2-s7-e2-s8-pr76-pr78-coverage-and-review-cycle.md  2026-05-09-e3-s1-pr79-driver-interface-review-cycle.md  (+52 more)
scripts/: validate_first_crack_wav_replay.py
tests/: test_ambient.py  test_ambient_runtime.py  test_artifacts.py  test_audio.py  test_audio_fixtures.py  test_config.py  test_detector.py  test_drivers.py  test_exports.py  test_first_crack_integration.py  test_first_crack_runtime.py  test_hottop_validation.py  test_mcp_server.py  test_mic_check.py  test_package.py  test_package_metadata.py  test_readme.py  test_record_check.py  test_release_workflow.py  test_server_json.py  test_session.py
(+37 files in other folders)
